[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
interface = { path = "../interface" }
sllist = { path = "../sllist" }
dllist = { path = "../dllist" }
skiplist-list = { path = "../skiplist-list" }
skiplist-sset = { path = "../skiplist-sset" }
treap = { path = "../treap" }
scapegoat-tree = { path = "../scapegoat-tree" }
binary-trie = { path = "../binary-trie" }
